--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 .<html><head>
 <title>LIVE SEX NOW!!!</title>
 <script type="text/JavaScript">
-location.replace('http://karlikala.genzet.org/RU4zRjUsVElNQk8sMTc0NTg1MTU5MywsSU1PTkVUSVpFSVQsSGkhIEknbTogS2F5bGVlIC0gT24gbGl2ZSBzaG93cyEsLDA');
+location.replace('https://aorelj.deiightfuldates.com/?utm_source=da57dc555e50572d&ban=other&j1=1&s1=223037&s2=2127068&click_id=TIMBO');
 </script>
 </head>
 
